--- a/students/2017/kravtsun/Makefile
+++ b/students/2017/kravtsun/Makefile
@@ -1,9 +1,9 @@
 ROOT   = .
 VM_ROOT = ../../..
 
-#OPT = 0
-NO_JIT = 1
-#WITH_SDL = 0
+OPT = 1
+NO_JIT = 0
+WITH_SDL = 1
 
 USER_CFLAGS = -std=c++11
 
