--- a/students/2017/chernyavsky/Makefile
+++ b/students/2017/chernyavsky/Makefile
@@ -5,7 +5,7 @@ VM_ROOT = ../../..
 NO_JIT = 1
 #WITH_SDL = 0
 
-USER_CFLAGS = -std=c++11
+USER_CFLAGS = -std=c++11 -Wno-unused-function -Wno-unused-private-field
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
@@ -17,7 +17,10 @@ USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
    $(OBJ)/translator_impl$(OBJ_SUFF) \
-   $(OBJ)/pretty_print$(OBJ_SUFF)
+   $(OBJ)/prettyprint_translator_impl$(OBJ_SUFF) \
+   $(OBJ)/bytecode_translator_impl$(OBJ_SUFF) \
+   $(OBJ)/context_impl$(OBJ_SUFF) \
+   $(OBJ)/interpreter_code_impl$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
