--- a/students/2017/tretiakova/1/Makefile
+++ b/students/2017/tretiakova/1/Makefile
@@ -16,15 +16,18 @@ endif
 USER_OBJ = \
    $(JIT_OBJ) \
    $(OBJ)/main$(OBJ_SUFF) \
-   $(OBJ)/translator_impl$(OBJ_SUFF)
+   $(OBJ)/translator_impl$(OBJ_SUFF) \
+   $(OBJ)/bytecode_code$(OBJ_SUFF) \
+   $(OBJ)/ast_to_bytecode_impl$(OBJ_SUFF)
 
 include $(VM_ROOT)/common.mk
 
 INCLUDE += -I$(ROOT)/include
+MY_HEADERS = include/bytecode_code.h include/ast_to_bytecode_impl.h
 
 MATHVM = $(BIN)/mvm
 
 all: $(MATHVM)
 
-$(MATHVM): $(OUT) $(USER_OBJ) $(MATHVM_OBJ)
+$(MATHVM): $(OUT) $(USER_OBJ) $(MATHVM_OBJ) $(MY_HEADERS)
 	$(CXX) -o $@ $(USER_OBJ) $(MATHVM_OBJ) $(LIBS)
