[hw3] Novozhilov Dmitriy. Fix Makefile

--- a/students/2018/novozhilov/Makefile
+++ b/students/2018/novozhilov/Makefile
@@ -10,9 +10,14 @@ NO_JIT = 1
 #WITH_SDL = 1
 
 USER_OBJ = \
+	$(OBJ)/bytecode_generator$(OBJ_SUFF) \
+	$(OBJ)/bytecode_interpreter$(OBJ_SUFF) \
+	$(OBJ)/bytecode_printer$(OBJ_SUFF) \
+	$(OBJ)/context$(OBJ_SUFF) \
+	$(OBJ)/info_collector$(OBJ_SUFF) \
 	$(OBJ)/main$(OBJ_SUFF) \
+	$(OBJ)/printer_translator$(OBJ_SUFF) \
 	$(OBJ)/translator_impl$(OBJ_SUFF) \
-	$(OBJ)/printer_translator$(OBJ_SUFF)
 
 USER_CFLAGS = -std=c++17 -g
 
