Update test scripts

--- a/students/2018/_example/Makefile
+++ b/students/2018/_example/Makefile
@@ -4,9 +4,9 @@ VM_ROOT = ../../..
 # This flag enables -O2 optimization. Usage: make OPT=1
 #OPT = 1
 
-# This flag disables JIT dependencies (should be 0 for task #4).
+# This flag disables JIT dependencies (should be 0 for task #3).
 NO_JIT = 1
-# This flag enables SDL dependencies (should be 1 for task #4).
+# This flag enables SDL dependencies (should be 1 for task #3).
 #WITH_SDL = 1
 
 USER_OBJ = \
@@ -28,12 +28,8 @@ KIND = debug
 endif
 
 test: $(MATHVM)
-	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
-	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
-	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
-	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
-	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
-	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
+	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests
+	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests
 
 $(MATHVM): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
