--- a/students/2018/khalansky/Makefile
+++ b/students/2018/khalansky/Makefile
@@ -5,9 +5,9 @@ VM_ROOT = ../../..
 #OPT = 1
 
 # This flag disables JIT dependencies (should be 0 for task #4).
-NO_JIT = 1
+NO_JIT = 0
 # This flag enables SDL dependencies (should be 1 for task #4).
-#WITH_SDL = 1
+WITH_SDL = 1
 
 ifneq ($(NO_JIT), 1)
 JIT_OBJ = $(OBJ)/jit$(OBJ_SUFF)
@@ -44,7 +44,7 @@ test: $(MATHVM)
 	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
 	$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
 	$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
-	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
+	$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
 
 $(MATHVM): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
