--- a/students/2018/Zubakov/Makefile
+++ b/students/2018/Zubakov/Makefile
@@ -2,7 +2,7 @@ ROOT   = .
 VM_ROOT = ../../..
 
 # This flag enables -O2 optimization. Usage: make OPT=1
-#OPT = 1
+OPT = 1
 
 # This flag disables JIT dependencies (should be 0 for task #4).
 NO_JIT = 1
@@ -20,8 +20,6 @@ USER_OBJ = \
 	$(OBJ)/translator_impl$(OBJ_SUFF) \
 	$(OBJ)/bytecode$(OBJ_SUFF) \
 	$(OBJ)/interpreter$(OBJ_SUFF) \
-	$(OBJ)/resolver$(OBJ_SUFF) \
-	$(OBJ)/testvisitor$(OBJ_SUFF) \
 	$(OBJ)/main$(OBJ_SUFF) \
 	$(OBJ)/typeinference$(OBJ_SUFF)
 
@@ -44,8 +42,8 @@ test: $(MATHVM)
 	#$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
 	#$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
 	$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
-	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
-	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
+	$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
+	$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
 
 $(MATHVM): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
 	$(CXX) -o $@ $(MATHVM_OBJ) $(USER_OBJ) $(LIBS)
