[hw2][hw3] Shemetova: ready without native func. Some tests work too long :(

--- a/students/2018/Shemetova/Makefile
+++ b/students/2018/Shemetova/Makefile
@@ -18,7 +18,11 @@ endif
 USER_OBJ = \
 	$(JIT_OBJ) \
 	$(OBJ)/main$(OBJ_SUFF) \
-	$(OBJ)/translator_impl$(OBJ_SUFF)
+	$(OBJ)/translator_impl$(OBJ_SUFF) \
+	$(OBJ)/interpreter/typer$(OBJ_SUFF) \
+	$(OBJ)/interpreter/ast_to_bytecode$(OBJ_SUFF) \
+	$(OBJ)/interpreter/interpreter$(OBJ_SUFF)
+	
 
 USER_CFLAGS = -std=c++14
 
@@ -26,7 +30,10 @@ include $(VM_ROOT)/common.mk
 
 MATHVM = $(BIN)/mvm
 
-all: $(MATHVM)
+all: customdirs | $(MATHVM)
+
+customdirs:
+	mkdir -p $(OBJ)/interpreter
 
 ifeq ($(OPT), 1)
 KIND = opt
@@ -35,11 +42,11 @@ KIND = debug
 endif
 
 test: $(MATHVM)
-	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
-	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
-	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
-	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
-	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
+	#$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
+	#$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
+	#$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
+	$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
+	$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
 	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
 
 $(MATHVM): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
