--- a/students/2018/orishchenko/Makefile
+++ b/students/2018/orishchenko/Makefile
@@ -12,7 +12,9 @@ NO_JIT = 1
 USER_OBJ = \
 	$(OBJ)/main$(OBJ_SUFF) \
 	$(OBJ)/translator_impl$(OBJ_SUFF) \
-	$(OBJ)/source_translator_impl$(OBJ_SUFF)
+	$(OBJ)/source_translator_impl$(OBJ_SUFF) \
+    $(OBJ)/bytecode_translator_impl$(OBJ_SUFF) \
+    $(OBJ)/interpreter_code$(OBJ_SUFF) \
 
 USER_CFLAGS = -std=c++14 -g
 
@@ -29,11 +31,11 @@ KIND = debug
 endif
 
 test: $(MATHVM)
-	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
-	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
-	$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
-	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
-	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
+	#$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
+	#$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
+	#$(VM_ROOT)/tests/task1.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
+	$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark3/
+	$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark4/
 	#$(VM_ROOT)/tests/task3.py -k $(KIND) -t $(VM_ROOT)/tests/mark5/
 
 $(MATHVM): $(OUT) $(MATHVM_OBJ) $(USER_OBJ)
